# langrag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.langfuse-remote.yml  docker-compose.yml  langgraph.json  nginx-https.conf  nginx.conf  proxy_rag.conf  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
data/podcasts/: manifest.json
docs/figures/pipeline-animation/: .gitignore  (+5 more)
docs/setup/: SETUP_BEEPER.md  SETUP_LINKEDIN_WEBHOOK.md
knowledge/: CHANGELOG.md
plugins/langrag-podcasts/: .mcp.json
src/: __init__.py  config.py  constants.py  main.py
src/agent/: __init__.py  graph.py  runtime.py  state.py
src/api/: __init__.py  admin_users.py  agent_api_keys.py  agent_chat.py  async_batch_orchestration.py  auth.py  client_ip.py  google_oauth.py  images.py  media.py  newsletter_gen.py  podcast_consumers.py  rag_conversation.py  rate_limiting.py  schedules.py  security_headers.py  session_token.py  signup_common.py  user_preferences.py
src/background_jobs/: __init__.py  batch_worker.py
src/core/: __init__.py
src/custom_types/: __init__.py  api_schemas.py  common.py  db_schemas.py  exceptions.py  field_keys.py  llm_schemas.py  slm_schemas.py  sse_events.py  translated_newsletter_schemas.py
src/db/: __init__.py  batch_jobs.py  bootstrap_admin.py  cache.py  connection.py  indexes.py  node_persistence.py  persistence_policy.py  run_tracker.py  scheduled_newsletters.py
src/graphs/: __init__.py  checkpointer.py  imports.py  state_keys.py
src/observability/: __init__.py  decorators.py
src/rag/: __init__.py
src/scheduler/: __init__.py  newsletter_scheduler.py
src/utils/: __init__.py  async_json_io.py  observability.py  output_paths.py  run_diagnostics.py  validation.py
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfstate.1772112919.backup  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_e2e_pipeline.py
tests/_helpers/: mongo.py
tests/golden_datasets/: newsletters_v1.json  newsletters_v2.json  podcasts_v1.json
tests/helpers/: __init__.py  pipeline_validator.py
tests/integration/: test_anthropic_provider.py  test_api_endpoints.py  test_email_delivery.py  test_multi_chat_consolidator_graph.py  test_single_chat_analyzer_graph.py
tests/unit/: __init__.py  test_associate_images.py  test_beeper_extractor.py  test_config_runtime_eval.py  test_constants.py  test_create_admin_users.py  test_discussion_document_schema.py  test_discussion_ranker.py  test_discussion_sample_messages.py  test_extraction_cache_overlap.py  test_generate_content_helpers.py  test_generator_factory.py  test_hybrid_decryption_manager.py  test_images_gallery.py  test_index_declarations_podcast.py  test_json_parser.py  test_langtalks_engagement_footer.py  test_langtalks_prompt_attribution.py  test_llm_utils.py  test_media_storage_read.py  test_migrate_periodic_output_layout.py  test_mmr_reranker.py  test_newsletter_assembler_images.py  test_node_persistence.py  test_observability_decorators.py  test_output_paths.py  test_path_containment.py  test_persistence_policy.py  test_rag_preferences_validation.py  test_rate_limiting.py  test_retry.py  test_room_id_cache_repository.py  test_run_tracker.py  test_translate_newsletter_structured.py  test_translation_cache_repository.py  test_whatsapp_preprocessor.py
ui/cli/: __init__.py  newsletter_cli.py
ui/frontend/: package-lock.json  package.json
(+529 files in other folders)
